fiks navn i GraderingAktivitetType, og løsne opp validering i historikklinje